<resources>

    <string name="app_name">Assassins Exia</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_screen">Start Screen</string>
    <string name="user_name_string">Username</string>
    <string name="password_string">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_in_button">Sign In</string>
    <string name="app_logo_description">Application Logo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pseudo_text">Pseudo</string>
    <string name="parties_en_cours_button_main">Parties En Cours</string>
    <string name="new_game_button_string">Créer une Partie</string>
    <string name="join_button_string">Rejoindre partie</string>
    <string name="stats_button">Statistiques</string>
    <string name="rules_button_string">Règles</string>
    <string name="legal_button_string">Informations légales</string>
    <string name="contrats_actifs_button_string">Contrats Actifs</string>
    <string name="partie_attente_button_string">Parties en attente</string>
    <string name="title_activity_parties_en_cours">PartiesEnCours</string>
    <string name="NameOfGame">Game XX</string>
    <string name="game_desctiption_string">Game Description</string>
    <string name="game_info_string">Game Information</string>
    <string name="nb_participants_string">Number of Players</string>
    <string name="twitter_tag_string">Twitter Tag</string>
    <string name="survivors_left_string">Survivors left</string>
    <string name="nb_teams_string">Nb Teams</string>
    <string name="teams_set_string">Teams</string>
    <string name="title_activity_random_pager">RandomPagerActivity</string>
    <string name="partie_privee_string">Privée</string>
    <string name="curr_target_button">Contrat en cours</string>
    <string name="declare_kill_button_string">Déclarer kill</string>
    <string name="user_object_button_string">Utiliser Objet</string>
    <string name="pseudo_textview_string">Pseudo</string>
    <string name="biography_textview_string">Biographie</string>
    <string name="title_activity_show_contract">ShowContractActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="name_textbox_hint">Nom</string>
    <string name="prenom_textbox">Prenom</string>
    <string name="location_text_view_string">Location</string>
    <string name="google_maps_api_key">0UdwCEOLoWCUwNFjDgmZXn842wBLoQ0x23Mr8Wg</string>
    <string name="pays_text_string">Pays</string>
    <string name="terminer_button">Terminer</string>
    <string name="picture_player">Photo</string>
    <string name="mail_address_textedit">Adresse mail</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_join_game">JoinGame</string>
    <string name="partie_publique_string">Public</string>
    <string name="partie_chercher_textedit_string">Code de la partie</string>
    <string name="partie_privee_search_button_desc">Rechercher partie privée</string>
    <string name="contract_picturebutton">Photo contrat</string>
    <string name="nb_of_players_string">Players in / max</string>
    <string name="join_alternate_string">Join</string>
    <string name="starts_on_date">Date début</string>
    <string name="load_more_button_string">Load More</string>
    <string name="title_activity_liste_contrats_actifs">ListeContratsActifsActivity</string>
    <string name="all_radiobutton_string">Tout</string>
    <string name="team_radiobutton_string">Team</string>
    <string name="ffa_radio_string">FFA</string>
    <string name="search_button_string">Search</string>
    <string name="game_start_date">Start date</string>
    <string name="cancel_app_button">Cancel</string>
    <string name="ends_on_date">Date Fin</string>
    <string name="prive_radio_string">Privé</string>
    <string name="publique_radio_string">Publique</string>
    <string name="solo_radio_string">Solo</string>
    <string name="team_radio_string">Equipe</string>
    <string name="title_activity_creation_partie">CreationPartieActivity</string>
    <string name="nom_string">Nom</string>
    <string name="description_string">Description</string>
    <string name="nbjoueur_string">Nombre de joueur</string>
    <string name="dollarpercontrat_string">Dollar par contrat</string>
    <string name="minijoueur_string">Minimum de joueur</string>
    <string name="datedebut_string">Date de début</string>
    <string name="creer_string">Créer</string>
    <string name="title_activity_description_partie">DescriptionPartie</string>
    <string name="rejoindre_string">Rejoindre</string>
    <string name="title_activity_statistiques">StatistiquesActivity</string>
    <string name="achievements_string">Achievements</string>
    <string name="historique_string">Historique</string>
    <string name="title_activity_partie_attente">PartieAttenteActivity</string>
    <string name="title_activity_fragment_partie_attente">FragmentPartieAttente</string>
    <string name="title_activity_inviter_joueur">InviterJoueurActivity</string>
    <string name="title_activity_invite_joueur_fragment">InviteJoueurFragment</string>
    <string name="title_activity_shop_fragment">ShopFragment</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="button_shop_string">Achat objets</string>
    <string name="num_telephone_textedit">Téléphone</string>
<string name="nb_equipe_string">Nombre équipe</string>

</resources>
