<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/name_of_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NameOfGame"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name_of_game"
        android:layout_marginTop="18dp"
        android:text="@string/join_alternate_string" />

    <TextView
        android:id="@+id/nb_of_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/name_of_game"
        android:layout_alignBottom="@+id/name_of_game"
        android:layout_toLeftOf="@+id/button1"
        android:text="@string/nb_of_players_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/date_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/nb_of_players"
        android:text="@string/ends_on_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/date_debut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/date_fin"
        android:layout_alignBottom="@+id/date_fin"
        android:layout_alignParentLeft="true"
        android:text="@string/starts_on_date"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>