<?xml version="1.0" encoding="utf-8"?>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
	    <GridLayout
	        xmlns:android="http://schemas.android.com/apk/res/android"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/game_name_id"
	            android:layout_column="2"
	            android:layout_gravity="right"
	            android:layout_row="0"
	            android:layout_rowSpan="2"
	            android:text="@string/NameOfGame"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <TextView
	            android:id="@+id/game_description_textView"
	            android:layout_column="1"
	            android:layout_columnSpan="3"
	            android:layout_gravity="left"
	            android:layout_row="2"
	            android:text="@string/game_desctiption_string"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/game_info"
	            android:layout_column="2"
	            android:layout_gravity="left"
	            android:layout_row="3"
	            android:text="@string/game_info_string"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <TextView
	            android:id="@+id/nb_participants"
	            android:layout_column="2"
	            android:layout_gravity="left"
	            android:layout_row="4"
	            android:text="@string/nb_participants_string"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:id="@+id/twitter_tag"
	            android:layout_column="3"
	            android:layout_gravity="left|bottom"
	            android:layout_row="4"
	            android:text="@string/twitter_tag_string"
	            android:textAppearance="?android:attr/textAppearanceSmall" />

	        <TextView
	            android:id="@+id/survivors_left"
	            android:layout_column="2"
	            android:layout_gravity="left"
	            android:layout_row="5"
	            android:text="@string/survivors_left_string"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <TextView
	            android:id="@+id/nb_teams"
	            android:layout_column="3"
	            android:layout_gravity="left|bottom"
	            android:layout_row="5"
	            android:text="@string/nb_teams_string"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <TextView
	            android:id="@+id/teams_set"
	            android:layout_column="2"
	            android:layout_gravity="right"
	            android:layout_row="7"
	            android:text="@string/teams_set_string"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <Space
	            android:layout_width="21dp"
	            android:layout_height="1dp"
	            android:layout_column="0"
	            android:layout_row="0" />

	        <Space
	            android:layout_width="16dp"
	            android:layout_height="1dp"
	            android:layout_column="1"
	            android:layout_row="0" />

	        <Space
	            android:layout_width="63dp"
	            android:layout_height="1dp"
	            android:layout_column="2"
	            android:layout_row="0" />

	        <Space
	            android:layout_width="1dp"
	            android:layout_height="21dp"
	            android:layout_column="0"
	            android:layout_row="0" />

	        <Space
	            android:layout_width="218dp"
	            android:layout_height="15dp"
	            android:layout_column="3"
	            android:layout_row="0" />

	        <Space
	            android:layout_width="-80dp"
	            android:layout_height="20dp"
	            android:layout_column="4"
	            android:layout_row="1" />

	        <Space
	            android:layout_width="100dp"
	            android:layout_height="20dp"
	            android:layout_row="1" />

	        <Space
	            android:layout_width="100dp"
	            android:layout_height="28dp"
	            android:layout_row="6" />

	        <Space
	            android:layout_width="100dp"
	            android:layout_height="129dp"
	            android:layout_row="8" />
	    </GridLayout>
    
    </ScrollView>
