    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/userNameTexBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_gravity="left"
                android:layout_row="1"
                android:ems="10"
                android:hint="@string/user_name_string" />

            <EditText
                android:id="@+id/passwordTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="3"
                android:layout_gravity="left"
                android:layout_row="3"
                android:layout_rowSpan="2"
                android:ems="10"
                android:hint="@string/password_string"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_row="5"
                android:text="@string/sign_in_button" />

            <Button
                android:id="@+id/logInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="left"
                android:layout_row="5"
                android:onClick="logInFunction"
                android:text="@string/log_in_button" />

            <Space
                android:layout_width="51dp"
                android:layout_height="1dp"
                android:layout_column="2"
                android:layout_row="0" />

            <Space
                android:layout_width="149dp"
                android:layout_height="1dp"
                android:layout_column="3"
                android:layout_row="0" />

            <Space
                android:layout_width="1dp"
                android:layout_height="21dp"
                android:layout_column="0"
                android:layout_row="0" />

            <Space
                android:layout_width="59dp"
                android:layout_height="15dp"
                android:layout_column="0"
                android:layout_row="0" />

            <Space
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_column="0"
                android:layout_row="2" />

            <Space
                android:layout_width="42dp"
                android:layout_height="36dp"
                android:layout_column="1"
                android:layout_row="2" />

            <Space
                android:layout_width="-40dp"
                android:layout_height="36dp"
                android:layout_column="4"
                android:layout_row="2" />

            <Space
                android:layout_width="1dp"
                android:layout_height="84dp"
                android:layout_column="0"
                android:layout_row="4" />

            <Space
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_column="1"
                android:layout_row="4" />
        </GridLayout>

    </ScrollView>
